@@ -1,3 +1,9 @@
+2004-06-07  Sushma Rai  <rsushma@novell.com>
+
+	* storage/exchange-hierarchy-favorites.c (remove_folder):
+	Removing ESources with favorite folder deletion.
+	This would be removed with code reorganization (#59168).
+
 2004-06-04  Sushma Rai  <rsushma@novell.com>
 
 	* storage/exchange-config-listener.c (remove_esource):
